--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <button type="button" id="inputDataForm-storeButton">lembrar</button>
                 </fieldset>
 
-                <output id="inputDataForm-memoryOutput" for="inputDataForm-storeButton">aaa</output>
+                <output id="inputDataForm-memoryOutput" class="displayClass" for="inputDataForm-storeButton">matriz definida</output>
                 
                 <fieldset id="inputDataForm-arrayChangingOperations">
                     <legend>Modificadores de estrutura</legend>
@@ -41,7 +41,7 @@
                     <button type="button" id="inputDataForm-orderButton">ordenar</button>
                 </fieldset>
                 
-                <output id="inputDataForm-operationsOutput" for="inputDataForm-invertButton inputDataForm-orderButton">bbb</output>
+                <output id="inputDataForm-operationsOutput" class="displayClass" for="inputDataForm-invertButton inputDataForm-orderButton">resultado das operações</output>
             </form>
         </main>
     </body>
